[SCB-2767]change filter chain to spring bean injection