@@ -19,10 +19,8 @@ package org.apache.servicecomb.core.filter;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import org.apache.servicecomb.core.Invocation;
-import org.apache.servicecomb.core.filter.impl.TransportFilters;
 import org.apache.servicecomb.foundation.common.utils.AsyncUtils;
 import org.apache.servicecomb.swagger.invocation.Response;
 
@@ -40,29 +38,15 @@ public class FilterNode {
 
   public static FilterNode buildChain(List<Filter> filters) {
     List<FilterNode> filterNodes = filters.stream()
-        .map(FilterNode::new)
-        .collect(Collectors.toList());
+        .map(FilterNode::new).toList();
 
     for (int idx = 0; idx < filterNodes.size() - 1; idx++) {
       FilterNode currentNode = filterNodes.get(idx);
       FilterNode nextNode = filterNodes.get(idx + 1);
       currentNode.setNextNode(nextNode);
-
-      if (currentNode.filter instanceof TransportFilters) {
-        mergeToChain((TransportFilters) currentNode.filter, nextNode);
-      }
     }
 
     return filterNodes.get(0);
-  }
-
-  private static void mergeToChain(TransportFilters filter, FilterNode nextNode) {
-    for (FilterNode node : filter.getChainByTransport().values()) {
-      while (node.nextNode != null) {
-        node = node.nextNode;
-      }
-      node.nextNode = nextNode;
-    }
   }
 
   private final Filter filter;
@@ -78,7 +62,7 @@ public class FilterNode {
   }
 
   public CompletableFuture<Response> onFilter(Invocation invocation) {
-    if (!filter.isEnabled()) {
+    if (!filter.isEnabledForTransport(invocation.getTransportName())) {
       return nextNode.onFilter(invocation);
     }
 
